# filmot-cli

./: .env.example  .gitignore  AGENTS_README.md  AGENTS_RESEARCH_GUIDE.md  AGENT_FEATURES_PLAN.md  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
context/: legacy2.ps1
filmot/: __init__.py  __main__.py  api.py  aws_transcribe.py  batch.py  cache.py  channel_dl.py  cli.py  config.py  export.py  interactive.py  ledger.py  library.py  proxy_pool.py  rate_limiter.py  transcript.py  watchlist.py  youtube.py  youtube_search.py
tests/: conftest.py  test_api.py  test_aws_transcribe.py  test_channel_dl.py  test_cli.py  test_library.py  test_proxy_pool.py  test_transcript.py  test_upgrades.py
