[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "filmot-cli"
version = "0.3.0"
description = "A powerful CLI for searching YouTube transcripts via the Filmot API"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "baba20o", email = "baba200@greenmountaincomputing.com"}
]
keywords = ["youtube", "transcripts", "subtitles", "filmot", "cli", "search"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]
dependencies = [
    "requests>=2.28.0",
    "python-dotenv>=1.0.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "youtube-transcript-api>=0.6.0",
    "google-api-python-client>=2.100.0",
]

[project.optional-dependencies]
aws = [
    "boto3>=1.26.0",
    "yt-dlp>=2023.1.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/baba20o/filmot-cli"
Repository = "https://github.com/baba20o/filmot-cli"
Issues = "https://github.com/baba20o/filmot-cli/issues"

[project.scripts]
filmot = "filmot.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["filmot*"]
